# nanpa

./: .build.yml  .gitignore  .nanparc  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix
.nanpa/: better-cargo.kdl  cargo-roots.kdl  fix-cargo.kdl
doc/: nanpa-changeset.5.scd  nanpa.1.scd  nanparc.5.scd
src/: cli.rs  main.rs  nanpa.rs  package.rs  util.rs
src/languages/: cargo.rs  mod.rs  node.rs
