[package]
name = "nanpa"
version = "0.1.0"
description = "a language-agnostic release manager"
license = "MIT"
authors = ["aoife cassidy <aoife@enby.space>"]
homepage = "https://github.com/nbsp/nanpa"
repository = "https://github.com/nbsp/nanpa"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.8", features = ["derive"] }
colored = "2.1.0"
glob = "0.3.1"
kdl = "4.6.0"
semver = "1.0.23"
toml_edit = "0.22.14"
